@@ -547,20 +547,20 @@ def make_ip_thermostat_group(
 # Case for device model is not relevant
 # device_type and sub_type(IP-only) can be used here
 DEVICES: dict[str, tuple[Any, list[int]]] = {
-    "BC-RT-TRX-CyG*": (make_thermostat, [1]),
-    "BC-RT-TRX-CyN*": (make_thermostat, [1]),
-    "BC-TC-C-WM*": (make_thermostat, [1]),
-    "HM-CC-RT-DN*": (make_thermostat, [4]),
+    "BC-RT-TRX-CyG": (make_thermostat, [1]),
+    "BC-RT-TRX-CyN": (make_thermostat, [1]),
+    "BC-TC-C-WM": (make_thermostat, [1]),
+    "HM-CC-RT-DN": (make_thermostat, [4]),
     "HM-CC-TC": (make_simple_thermostat, [1]),
     "HM-CC-VG-1": (make_thermostat_group, [1]),
     "HM-TC-IT-WM-W-EU": (make_thermostat, [2]),
-    "HmIP-BWTH*": (make_ip_thermostat, [1]),
-    "HmIP-eTRV*": (make_ip_thermostat, [1]),
+    "HmIP-BWTH": (make_ip_thermostat, [1]),
+    "HmIP-eTRV": (make_ip_thermostat, [1]),
     "HmIP-HEATING": (make_ip_thermostat_group, [1]),
     "HmIP-STHD": (make_ip_thermostat, [1]),
-    "HmIP-WTH*": (make_ip_thermostat, [1]),
-    "HmIPW-STH*": (make_ip_thermostat, [1]),
-    "HmIPW-WTH*": (make_ip_thermostat, [1]),
-    "Thermostat AA*": (make_ip_thermostat, [1]),
+    "HmIP-WTH": (make_ip_thermostat, [1]),
+    "HmIPW-STH": (make_ip_thermostat, [1]),
+    "HmIPW-WTH": (make_ip_thermostat, [1]),
+    "Thermostat AA": (make_ip_thermostat, [1]),
     "ZEL STG RM FWT": (make_simple_thermostat, [1]),
 }
