@@ -100,13 +100,13 @@ def make_ip_switch(
 # device_type and sub_type(IP-only) can be used here
 DEVICES: dict[str, tuple[Any, list[int]]] = {
     "HmIP-BSM": (make_ip_switch, [3]),
-    "HmIP-FSM*": (make_ip_switch, [1]),
-    "HmIP-FSI*": (make_ip_switch, [2]),
-    "HmIP-PS*": (make_ip_switch, [2]),
+    "HmIP-FSM": (make_ip_switch, [1]),
+    "HmIP-FSI": (make_ip_switch, [2]),
+    "HmIP-PS": (make_ip_switch, [2]),
     "HmIP-BSL": (make_ip_switch, [3]),
     "HmIP-DRSI1": (make_ip_switch, [2]),
     "HmIP-DRSI4": (make_ip_switch, [5, 9, 13, 17]),
-    "HmIPW-DRS*": (make_ip_switch, [1, 5, 9, 13, 17, 21, 25, 29]),
+    "HmIPW-DRS": (make_ip_switch, [1, 5, 9, 13, 17, 21, 25, 29]),
     "HmIP-MOD-OC8": (make_ip_switch, [9, 13, 17, 21, 25, 29, 33, 37]),
     "HmIP-PCBS": (make_ip_switch, [2]),
     "HmIP-PCBS2": (make_ip_switch, [3, 7]),
@@ -114,7 +114,7 @@ DEVICES: dict[str, tuple[Any, list[int]]] = {
     "HmIP-SCTH230": (make_ip_switch, [7]),
     "HmIP-USBSM": (make_ip_switch, [2]),
     "HmIP-WGC": (make_ip_switch, [2]),
-    "HmIP-WHS": (make_ip_switch, [1, 5]),
+    "HmIP-WHS2": (make_ip_switch, [1, 5]),
     # HmIP-MIO16-PCB : Don't add it. Too much functionality. Device is better supported without custom entities.
     # HmIP-MIOB : Don't add it. Too much functionality. Device is better supported without custom entities.
 }
